add columns db and fix controllers and tests
